# monorepo

./: .gitignore  Cargo.toml  README.md  TODO.norg  flake.nix  justfile  package-lock.json  test.http
bench/: node.js  wrk.lua
examples/assemblyscript/: package-lock.json  package.json
examples/assemblyscript/assembly/: index.ts
examples/go/: justfile  lib.go
examples/haskell/: .gitignore  interface.c  justfile  lib.hs
examples/rust/: Cargo.toml  justfile
examples/rust/src/: lib.rs
examples/zig/: .gitignore  build.zig
examples/zig/src/: main.zig
test-fixtures/module-1/: Cargo.toml  justfile  lib.rs  lib.wasm
test-fixtures/module-1/src/: lib.rs
test-fixtures/module-2/: justfile  lib.ts  lib.wasm  package-lock.json  package.json
