[workspace]
resolver = "2"
members = [
  "packages/core",
  "packages/rust-module-utils",
  "examples/rust",
  "test-fixtures/module-1",
]

[profile.dev]
opt-level = 1

[profile.dev.package.tokio]
opt-level = 3
[profile.dev.package.wasmtime]
opt-level = 3
[profile.dev.package.wasmtime-wasi]
opt-level = 3

